[package]
authors.workspace = true
build = "build.rs"
description = "Runtime of the Kusama Network"
edition.workspace = true
license.workspace = true
name = "staging-kusama-runtime"
repository.workspace = true
version.workspace = true

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.6.9", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
log = { version = "0.4.20", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.196", default-features = false }
serde_derive = { version = "1.0.196", optional = true }
static_assertions = "1.1.0"

authority-discovery-primitives = { package = "sp-authority-discovery", default-features = false , version = "27.0.0" }
babe-primitives = { package = "sp-consensus-babe", default-features = false , version = "0.33.0" }
beefy-primitives = { package = "sp-consensus-beefy", default-features = false , version = "14.0.0" }
binary-merkle-tree = { default-features = false , version = "14.0.0" }
kusama-runtime-constants = { package = "kusama-runtime-constants", path = "constants", default-features = false }
sp-api = { default-features = false , version = "27.0.0" }
inherents = { package = "sp-inherents", default-features = false , version = "27.0.0" }
offchain-primitives = { package = "sp-offchain", default-features = false , version = "27.0.0" }
sp-std = { package = "sp-std", default-features = false , version = "14.0.0" }
sp-application-crypto = { default-features = false , version = "31.0.0" }
sp-arithmetic = { default-features = false , version = "24.0.0" }
sp-genesis-builder = { default-features = false , version = "0.8.0" }
sp-io = { default-features = false , version = "31.0.0" }
sp-mmr-primitives = { default-features = false , version = "27.0.0" }
sp-runtime = { default-features = false , version = "32.0.0" }
sp-staking = { default-features = false , version = "27.0.0" }
sp-core = { default-features = false , version = "29.0.0" }
sp-session = { default-features = false , version = "28.0.0" }
sp-storage = { default-features = false , version = "20.0.0" }
sp-version = { default-features = false , version = "30.0.0" }
tx-pool-api = { package = "sp-transaction-pool", default-features = false , version = "27.0.0" }
block-builder-api = { package = "sp-block-builder", default-features = false , version = "27.0.0" }
sp-npos-elections = { default-features = false , version = "27.0.0" }

pallet-asset-rate = { default-features = false , version = "8.0.0" }
pallet-authority-discovery = { default-features = false , version = "29.0.0" }
pallet-authorship = { default-features = false , version = "29.0.0" }
pallet-babe = { default-features = false , version = "29.0.0" }
pallet-bags-list = { default-features = false , version = "28.0.0" }
pallet-balances = { default-features = false , version = "29.0.0" }
pallet-beefy = { default-features = false , version = "29.0.0" }
pallet-beefy-mmr = { default-features = false , version = "29.0.0" }
pallet-bounties = { default-features = false , version = "28.0.0" }
pallet-child-bounties = { default-features = false , version = "28.0.0" }
pallet-transaction-payment = { default-features = false , version = "29.0.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false , version = "29.0.0" }
pallet-nomination-pools-runtime-api = { default-features = false , version = "24.0.0" }
pallet-collective = { default-features = false , version = "29.0.0" }
pallet-conviction-voting = { default-features = false , version = "29.0.0" }
pallet-democracy = { default-features = false , version = "29.0.0" }
pallet-elections-phragmen = { default-features = false , version = "30.0.0" }
pallet-election-provider-multi-phase = { default-features = false , version = "28.0.0" }
pallet-fast-unstake = { default-features = false , version = "28.0.0" }
frame-executive = { default-features = false , version = "29.0.0" }
pallet-grandpa = { default-features = false , version = "29.0.0" }
pallet-nis = { default-features = false , version = "29.0.0" }
pallet-identity = { default-features = false , version = "29.0.0" }
pallet-im-online = { default-features = false , version = "28.0.0" }
pallet-indices = { default-features = false , version = "29.0.0" }
pallet-membership = { default-features = false , version = "29.0.0" }
pallet-message-queue = { default-features = false , version = "32.0.0" }
pallet-mmr = { default-features = false , version = "28.0.0" }
pallet-multisig = { default-features = false , version = "29.0.0" }
pallet-nomination-pools = { default-features = false , version = "26.0.0" }
pallet-offences = { default-features = false , version = "28.0.0" }
pallet-preimage = { default-features = false , version = "29.0.0" }
pallet-proxy = { default-features = false , version = "29.0.0" }
pallet-ranked-collective = { default-features = false , version = "29.0.0" }
pallet-recovery = { default-features = false , version = "29.0.0" }
pallet-referenda = { default-features = false , version = "29.0.0" }
pallet-scheduler = { default-features = false , version = "30.0.0" }
pallet-session = { default-features = false , version = "29.0.0" }
pallet-society = { default-features = false, version = "29.0.0" }
frame-support = { default-features = false , version = "29.0.0" }
pallet-staking = { default-features = false , version = "29.0.0" }
pallet-state-trie-migration = { default-features = false , version = "30.0.0" }
pallet-staking-runtime-api = { default-features = false , version = "15.0.0" }
frame-system = { default-features = false , version = "29.0.0" }
frame-system-rpc-runtime-api = { default-features = false , version = "27.0.0" }
pallet-timestamp = { default-features = false , version = "28.0.0" }
pallet-tips = { default-features = false , version = "28.0.0" }
pallet-treasury = { default-features = false , version = "28.0.0" }
pallet-utility = { default-features = false , version = "29.0.0" }
pallet-vesting = { default-features = false , version = "29.0.0" }
pallet-whitelist = { default-features = false , version = "28.0.0" }
pallet-xcm = { default-features = false , version = "8.0.0" }
pallet-xcm-benchmarks = { default-features = false, optional = true , version = "8.0.0" }
frame-election-provider-support = { default-features = false , version = "29.0.0" }

frame-benchmarking = { default-features = false, optional = true , version = "29.0.0" }
frame-try-runtime = { default-features = false, optional = true , version = "0.35.0" }
pallet-offences-benchmarking = { default-features = false, optional = true , version = "29.0.0" }
pallet-session-benchmarking = { default-features = false, optional = true , version = "29.0.0" }
pallet-nomination-pools-benchmarking = { default-features = false, optional = true , version = "27.0.0" }
frame-system-benchmarking = { default-features = false, optional = true , version = "29.0.0" }
pallet-election-provider-support-benchmarking = { default-features = false, optional = true , version = "28.0.0" }
hex-literal = "0.4.1"

runtime-common = { package = "polkadot-runtime-common", default-features = false, version = "8.0.0" }
runtime-parachains = { package = "polkadot-runtime-parachains", default-features = false , version = "8.0.0" }
primitives = { package = "polkadot-primitives", default-features = false , version = "8.0.0" }

xcm = { package = "staging-xcm", default-features = false , version = "8.0.0" }
xcm-executor = { package = "staging-xcm-executor", default-features = false , version = "8.0.1" }
xcm-builder = { package = "staging-xcm-builder", default-features = false , version = "8.0.0" }

sp-debug-derive = { default-features = false, version = "14.0.0" }

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", version = "32.0.0" }
sp-trie = { version = "30.0.0" }
separator = "0.4.1"
serde_json = "1.0.113"
remote-externalities = { package = "frame-remote-externalities", version = "0.36.0" }
tokio = { version = "1.36.0", features = ["macros"] }
sp-tracing = { default-features = false , version = "16.0.0" }

[build-dependencies]
substrate-wasm-builder = { version = "18.0.0" }

[features]
default = [ "std" ]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"babe-primitives/std",
	"beefy-primitives/std",
	"binary-merkle-tree/std",
	"bitvec/std",
	"block-builder-api/std",
	"frame-benchmarking?/std",
	"frame-election-provider-support/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"inherents/std",
	"kusama-runtime-constants/std",
	"log/std",
	"offchain-primitives/std",
	"pallet-asset-rate/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-beefy-mmr/std",
	"pallet-beefy/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"pallet-collective/std",
	"pallet-conviction-voting/std",
	"pallet-democracy/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-election-provider-support-benchmarking?/std",
	"pallet-elections-phragmen/std",
	"pallet-fast-unstake/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-message-queue/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-nis/std",
	"pallet-nomination-pools-benchmarking?/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-nomination-pools/std",
	"pallet-offences-benchmarking?/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-ranked-collective/std",
	"pallet-recovery/std",
	"pallet-referenda/std",
	"pallet-scheduler/std",
	"pallet-session-benchmarking?/std",
	"pallet-session/std",
	"pallet-society/std",
	"pallet-staking-runtime-api/std",
	"pallet-staking/std",
	"pallet-state-trie-migration/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-whitelist/std",
	"pallet-xcm-benchmarks?/std",
	"pallet-xcm/std",
	"parity-scale-codec/std",
	"primitives/std",
	"runtime-common/std",
	"runtime-parachains/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde/std",
	"serde_derive",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-debug-derive/std",
	"sp-genesis-builder/std",
	"sp-io/std",
	"sp-mmr-primitives/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-tracing/std",
	"sp-version/std",
	"tx-pool-api/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-asset-rate/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-fast-unstake/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-nis/runtime-benchmarks",
	"pallet-nomination-pools-benchmarking/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	"pallet-offences-benchmarking/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-ranked-collective/runtime-benchmarks",
	"pallet-recovery/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-state-trie-migration/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"pallet-xcm-benchmarks/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"primitives/runtime-benchmarks",
	"runtime-common/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-asset-rate/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-beefy-mmr/try-runtime",
	"pallet-beefy/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-fast-unstake/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-nis/try-runtime",
	"pallet-nomination-pools/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-ranked-collective/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-society/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-state-trie-migration/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-whitelist/try-runtime",
	"pallet-xcm/try-runtime",
	"runtime-common/try-runtime",
	"runtime-parachains/try-runtime",
	"sp-runtime/try-runtime",
]

# A feature that should be enabled when the runtime should be built for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller, like logging for example.
on-chain-release-build = [ "sp-api/disable-logging" ]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

runtime-metrics = [ "runtime-parachains/runtime-metrics", "sp-io/with-tracing" ]

force-debug = [ "sp-debug-derive/force-debug" ]
